Major changes, added Zstd dictionary functions

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,59 +1,59 @@
 @article{li2014big,
     number = {5},
-    title = {Big biological data: challenges and opportunities},
     year = {2014},
-    pages = {187},
-    publisher = {Elsevier},
     volume = {12},
-    journal = {Genomics, proteomics \& bioinformatics},
+    publisher = {Elsevier},
     author = {Li, Yixue and Chen, Luonan},
+    pages = {187},
+    title = {Big biological data: challenges and opportunities},
+    journal = {Genomics, proteomics \& bioinformatics},
 }
 
 @article{d2018high,
     publisher = {MDPI},
-    author = {D’Argenio, Valeria},
-    journal = {High-throughput},
-    number = {1},
-    year = {2018},
-    pages = {8},
     title = {The high-throughput analyses era: are we ready for the data struggle?},
+    author = {D’Argenio, Valeria},
+    year = {2018},
+    number = {1},
+    journal = {High-throughput},
+    pages = {8},
     volume = {7},
 }
 
 @article{Julia-2017,
+    publisher = {SIAM},
     doi = {10.1137/141000671},
     year = {2017},
-    pages = {65--98},
-    volume = {59},
-    publisher = {SIAM},
-    title = {Julia: A fresh approach to numerical computing},
-    journal = {SIAM {R}eview},
-    number = {1},
     author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+    title = {Julia: A fresh approach to numerical computing},
     url = {https://epubs.siam.org/doi/10.1137/141000671},
+    volume = {59},
+    pages = {65--98},
+    number = {1},
+    journal = {SIAM {R}eview},
 }
 
 @misc{sandoval,
     url = {https://apps.gnome.org/app/org.gnome.World.Citations/},
     journal = {– Apps for GNOME},
-    author = {Sandoval, Maximiliano},
-    publisher = {GNOME Circle},
     title = {Citations – apps for Gnome},
+    publisher = {GNOME Circle},
+    author = {Sandoval, Maximiliano},
 }
 
 @software{Allaire_Quarto_2022,
-    title = {{Quarto}},
-    doi = {10.5281/zenodo.5960048},
-    author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
-    year = {2022},
-    month = {1},
     url = {https://github.com/quarto-dev/quarto-cli},
+    doi = {10.5281/zenodo.5960048},
     version = {0.3},
+    year = {2022},
+    title = {{Quarto}},
+    month = {1},
+    author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
 }
 
 @misc{maio,
-    author = {Di Maio , Luca},
     url = {https://github.com/89luca89/distrobox},
+    author = {Di Maio , Luca},
     journal = {GitHub},
     title = {Distrobox},
 }
@@ -62,195 +62,210 @@
     journal = {Procedia Computer Science},
     volume = {201},
     title = {Intelligent Approaches to Optimizing Big Data Storage and Management: REHDFS system and DNA Storage},
-    publisher = {Elsevier},
-    pages = {746--751},
     year = {2022},
+    publisher = {Elsevier},
     author = {Sais, Manar and Rafalia, Najat and Abouchabaka, Jaafar},
+    pages = {746--751},
 }
 
 @article{jayasankar2021survey,
-    publisher = {Elsevier},
-    pages = {119--140},
-    author = {Jayasankar, Uthayakumar and Thirumal, Vengattaraman and Ponnurangam, Dhavachelvan},
+    year = {2021},
+    title = {A survey on data compression techniques: From the perspective of data quality, coding schemes, data type and applications},
     journal = {Journal of King Saud University-Computer and Information Sciences},
     number = {2},
     volume = {33},
-    year = {2021},
-    title = {A survey on data compression techniques: From the perspective of data quality, coding schemes, data type and applications},
+    author = {Jayasankar, Uthayakumar and Thirumal, Vengattaraman and Ponnurangam, Dhavachelvan},
+    pages = {119--140},
+    publisher = {Elsevier},
 }
 
 @article{grumbach1994new,
     pages = {875--886},
-    journal = {Information processing \& management},
-    author = {Grumbach, St{\'e}phane and Tahi, Fariza},
     volume = {30},
-    publisher = {Elsevier},
-    title = {A new challenge for compression algorithms: genetic sequences},
+    journal = {Information processing \& management},
     number = {6},
+    author = {Grumbach, St{\'e}phane and Tahi, Fariza},
+    title = {A new challenge for compression algorithms: genetic sequences},
+    publisher = {Elsevier},
     year = {1994},
 }
 
 @article{mills2014common,
+    title = {Common file formats},
     number = {1},
-    pages = {A--1B},
     journal = {Current protocols in bioinformatics},
+    pages = {A--1B},
+    year = {2014},
     publisher = {Wiley Online Library},
     author = {Mills, Lauren},
-    year = {2014},
     volume = {45},
-    title = {Common file formats},
 }
 
 @article{lipman1985rapid,
-    number = {4693},
     pages = {1435--1441},
-    title = {Rapid and sensitive protein similarity searches},
-    volume = {227},
-    author = {Lipman, David J and Pearson, William R},
-    journal = {Science},
-    publisher = {American Association for the Advancement of Science},
     year = {1985},
+    volume = {227},
+    publisher = {American Association for the Advancement of Science},
+    number = {4693},
+    author = {Lipman, David J and Pearson, William R},
+    title = {Rapid and sensitive protein similarity searches},
+    journal = {Science},
 }
 
 @article{mohammed2012deliminate,
-    journal = {Bioinformatics},
-    number = {19},
     title = {DELIMINATE—a fast and efficient method for loss-less compression of genomic sequences: Sequence analysis},
-    year = {2012},
+    journal = {Bioinformatics},
     pages = {2527--2529},
-    volume = {28},
     author = {Mohammed, Monzoorul Haque and Dutta, Anirban and Bose, Tungadri and Chadaram, Sudha and Mande, Sharmila S},
+    number = {19},
+    year = {2012},
+    volume = {28},
     publisher = {Oxford University Press},
 }
 
 @article{pinho2014mfcompress,
-    pages = {117--118},
-    year = {2014},
     number = {1},
-    publisher = {Oxford University Press},
-    volume = {30},
+    year = {2014},
     author = {Pinho, Armando J and Pratas, Diogo},
     title = {MFCompress: a compression tool for FASTA and multi-FASTA data},
     journal = {Bioinformatics},
-}
-
-@article{kryukov2019nucleotide,
-    pages = {3826--3828},
-    year = {2019},
-    volume = {35},
-    journal = {Bioinformatics},
-    author = {Kryukov, Kirill and Ueda, Mahoko Takahashi and Nakagawa, So and Imanishi, Tadashi},
-    number = {19},
-    title = {Nucleotide Archival Format (NAF) enables efficient lossless reference-free compression of DNA sequences},
+    volume = {30},
+    pages = {117--118},
     publisher = {Oxford University Press},
 }
 
+@article{kryukov2019nucleotide,
+    author = {Kryukov, Kirill and Ueda, Mahoko Takahashi and Nakagawa, So and Imanishi, Tadashi},
+    title = {Nucleotide Archival Format (NAF) enables efficient lossless reference-free compression of DNA sequences},
+    pages = {3826--3828},
+    publisher = {Oxford University Press},
+    volume = {35},
+    year = {2019},
+    number = {19},
+    journal = {Bioinformatics},
+}
+
 @misc{collet2021rfc8478,
-    author = {Collet, Yann and Kucherawy, M},
-    title = {RFC8478: Zstandard compression and the application/zstd media type},
     year = {2021},
+    title = {RFC8478: Zstandard compression and the application/zstd media type},
+    author = {Collet, Yann and Kucherawy, M},
 }
 
 @misc{facebook,
-    title = {Facebook/ZSTD: Zstandard - fast real-time compression algorithm},
-    journal = {GitHub},
     url = {https://github.com/facebook/zstd},
+    journal = {GitHub},
     author = {Facebook},
+    title = {Facebook/ZSTD: Zstandard - fast real-time compression algorithm},
 }
 
 @incollection{LU20171,
-    url = {https://www.sciencedirect.com/science/article/pii/B9780128120064000012},
-    editor = {Zhe-Ming Lu and Shi-Ze Guo},
     booktitle = {Lossless Information Hiding in Images},
-    year = {2017},
     abstract = {With the rapid development of digital image processing techniques and the popularization of the Internet, digital images are being used more and more widely in a number of applications from medical imaging and law enforcement to banking and daily consumer use. They are much more convenient in editing, copying, storing, transmitting, and utilizing. However, unfortunately, at the same time, digital images are facing the problems of copyright protection and content authentication. Since the 1990s, the development of information hiding techniques has provided a way to protect digital media. Such techniques embed some secret information like private annotations, business logos, and critical intelligence into cover media in an invisible form so that many applications, like ownership claim of digital contents, copyright protection of media, and covert communication between parties, can be fulfilled. In general, compared with the cover media, the stego media has a small amount of content distortion that is usually imperceptible to human vision. However, such distortion is not preferred in some applications, such as legal documentation, medical imaging, military reconnaissance, and high-precision scientific investigation, because it may lead to risks of incorrect decision making. In view of this, a kind of novel information hiding technique, which is referred to as reversible, invertible, lossless, or distortion-free information hiding, has been developed in recent years. Lossless information hiding techniques can be employed to restore stego images to their pristine states after the hidden data are extracted. In this chapter, we first introduce the background of this book, including the concepts and issues related to images and network information security. Then, we introduce the concepts, models, research branches, and required properties of information hiding; the classification of information hiding algorithms; and the application fields of information hiding techniques. Then, an overview is provided of the coding techniques for image compression, including entropy coding, transform coding, vector quantization, and block truncation coding, together with JPEG and JPEG2000 standards. Next, we provide an overview of the information hiding techniques for images, including the framework, classification, and required properties. Thereafter, we introduce the possible applications of lossless information hiding techniques for images. Finally, we give the outline of this book.},
-    publisher = {Syngress},
-    keywords = {Image, Image compression, Image processing, Information hiding, Lossless information hiding},
-    author = {Zhe-Ming Lu and Shi-Ze Guo},
-    pages = {1-68},
     doi = {https://doi.org/10.1016/B978-0-12-812006-4.00001-2},
+    year = {2017},
+    editor = {Zhe-Ming Lu and Shi-Ze Guo},
+    keywords = {Image, Image compression, Image processing, Information hiding, Lossless information hiding},
+    pages = {1-68},
+    author = {Zhe-Ming Lu and Shi-Ze Guo},
     title = {Chapter 1 - Introduction},
+    publisher = {Syngress},
+    url = {https://www.sciencedirect.com/science/article/pii/B9780128120064000012},
     isbn = {978-0-12-812006-4},
 }
 
 @article{ezhilarasan_thambidurai_praveena_srinivasan_sumathi_2007,
-    journal = {International Conference on Computational Intelligence and Multimedia Applications (ICCIMA 2007)},
-    title = {A new entropy encoding technique for multimedia data compression},
-    year = {2007},
     doi = {10.1109/iccima.2007.123},
     author = {Ezhilarasan, M. and Thambidurai, P. and Praveena, K. and Srinivasan, Sudha and Sumathi, N.},
+    year = {2007},
+    title = {A new entropy encoding technique for multimedia data compression},
+    journal = {International Conference on Computational Intelligence and Multimedia Applications (ICCIMA 2007)},
 }
 
 @inproceedings{8316293,
-    author = {Kanda, Shunsuke and Morita, Kazuhiro and Fuketa, Masao},
-    doi = {10.1109/Innovate-Data.2017.9},
     pages = {1-8},
-    booktitle = {2017 International Conference on Big Data Innovations and Applications (Innovate-Data)},
+    doi = {10.1109/Innovate-Data.2017.9},
+    number = {},
     title = {Practical String Dictionary Compression Using String Dictionary Encoding},
     volume = {},
     year = {2017},
-    number = {},
+    booktitle = {2017 International Conference on Big Data Innovations and Applications (Innovate-Data)},
+    author = {Kanda, Shunsuke and Morita, Kazuhiro and Fuketa, Masao},
 }
 
 @misc{ncbi,
-    url = {https://www.ncbi.nlm.nih.gov/nuccore/NZ_ADUC00000000.1},
-    title = {Escherichia coli MS 200-1, Whole Genome Shotgun sequencing project - nucleotide - NCBI},
-    publisher = {U.S. National Library of Medicine},
     journal = {National Center for Biotechnology Information},
+    publisher = {U.S. National Library of Medicine},
+    title = {Escherichia coli MS 200-1, Whole Genome Shotgun sequencing project - nucleotide - NCBI},
+    url = {https://www.ncbi.nlm.nih.gov/nuccore/NZ_ADUC00000000.1},
 }
 
 @misc{sato,
-    publisher = {JuliaIO},
-    url = {https://github.com/JuliaIO/TranscodingStreams.jl},
     title = {JuliaIO/TranscodingStreams.jl: Simple, consistent interfaces for any codec.},
-    journal = {GitHub},
     author = {Sato, Kenta},
+    journal = {GitHub},
+    url = {https://github.com/JuliaIO/TranscodingStreams.jl},
+    publisher = {JuliaIO},
 }
 
 @misc{biosequences,
-    journal = {GitHub},
-    url = {https://github.com/BioJulia/BioSequences.jl},
     author = {Ward, Sabrina Jaye and Nissen, Jakob},
+    url = {https://github.com/BioJulia/BioSequences.jl},
     publisher = {BioJulia},
+    journal = {GitHub},
     title = {Biojulia/biosequences.jl: Biological sequences for the julia language},
 }
 
 @misc{fastx,
-    author = {Ward, Sabrina and Nissen, Jakob},
+    publisher = {BioJulia},
     title = {Biojulia/fastx.jl: Parse and process fasta and FASTQ formatted files of biological sequences.},
     url = {https://github.com/BioJulia/FASTX.jl},
+    author = {Ward, Sabrina and Nissen, Jakob},
     journal = {GitHub},
-    publisher = {BioJulia},
 }
 
 @misc{codecbzip2,
-    title = {Juliaio/codecbzip2.jl: A Bzip2 codec for transcodingstreams.jl.},
     journal = {GitHub},
     publisher = {JuliaIO},
     author = {Sato, Kenta},
     url = {https://github.com/JuliaIO/CodecBzip2.jl},
+    title = {Juliaio/codecbzip2.jl: A Bzip2 codec for transcodingstreams.jl.},
 }
 
 @misc{codecxz,
-    publisher = {JuliaIO},
     journal = {GitHub},
+    publisher = {JuliaIO},
     author = {Sato, Kenta},
-    title = {Juliaio/CodecXz.jl: An XZ codec for TranscodingStreams.jl.},
     url = {https://github.com/JuliaIO/CodecXz.jl},
+    title = {Juliaio/CodecXz.jl: An XZ codec for TranscodingStreams.jl.},
 }
 
 @misc{codeczlib,
+    author = {Sato, Kenta},
     title = {Juliaio/CodecZlib.jl: Zlib codecs for TranscodingStreams.jl.},
     url = {https://github.com/JuliaIO/CodecZlib.jl},
     journal = {GitHub},
     publisher = {JuliaIO},
-    author = {Sato, Kenta},
 }
 
 @misc{codeczstd,
-    journal = {GitHub},
     publisher = {JuliaIO},
     url = {https://github.com/JuliaIO/CodecZstd.jl},
-    title = {Juliaio/CodecZstd.jl: A ZSTD codec for transcodingstreams.jl.},
+    journal = {GitHub},
     author = {Sato, Kenta},
+    title = {Juliaio/CodecZstd.jl: A ZSTD codec for transcodingstreams.jl.},
+}
+
+@article{fastafs,
+    author = {Hoogstrate, Youri and Jenster, Guido and van de Werken, Harmen J.},
+    year = {2020},
+    doi = {10.1101/2020.11.11.377689},
+    title = {FASTAFS: File system virtualisation of random access compressed FASTA files},
+}
+
+@misc{kittisopikul,
+    url = {https://github.com/mkitti/CodecZstd.jl/tree/dictionary_and_parameters},
+    journal = {GitHub},
+    publisher = {JuliaIO},
+    author = {Kittisopikul, Mark},
+    title = {Mkitti/codeczstd.jl Experimental CodecZstd.jl branch},
 }
