--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -12,7 +12,7 @@ format:
       % \usepackage{setspace} 
       % \doublespacing
 author:
-  - name: Michael Persico
+  - name: Michael A. Persico
     equal-contributor: false
     affiliations:
       - ref: aff1
@@ -53,9 +53,9 @@ Common bioinformatics file formats often include a set structure with the expres
 
 # Materials and methods 
 
-All resources for the paper are included in the public Github repository at github.com/M-PERSIC/Persico2022.git.
+All resources for the paper are included in the public Github repository at [github.com/M-PERSIC/Persico2022.git](https://www.github.com/M-PERSIC/Persico2022.git).
 
-The model contains two pipelines, one for Zstd custom dictionary generation and another for generating transcoded compression data using Bzip2, Xz, zLib, and Zstd compressors, with a general overview in @fig-model. Julia was chosen as there is package support for working with sequence data as well as for trivial transcoding of compressed or decompressed data via TranscodingStreams.jl wherein compression algorithm implementations are loaded as codecs[@sato]. A list of all direct dependencies can be found in the repository's Project.toml file. The Julia implementation operates by first unloading a tarball containing the set of FASTA training files into a Julia artifact, or life-cycled datastore. The files are plugged into Zstd's Dictionary API to generate a custom dictionary specific to that dataset. Random FASTA data is generated using BioSequences.jl[@biosequences] and FASTX.jl[@fastx] APIs which is then transcoded into compressed formats via the CodecBzip2.jl[@codecbzip2], CodecXz.jl[@codecxz], CodecZlib.jl[@codeczlib], and CodecZstd.jl[@codeczstd] codecs for comparative analysis. Both dictionary-based and default Zstd compression are applied to determine if the former desmontrates a significant reduction in data size.
+The model contains two pipelines, one for Zstd custom dictionary generation and another for generating transcoded compression data using Bzip2, Xz, zLib, and Zstd compressors, with a general overview in @fig-model. Julia was chosen as there is package support for working with sequence data as well as for trivial transcoding of compressed or decompressed data via TranscodingStreams.jl wherein compression algorithm implementations are loaded as codecs[@sato]. A list of all direct dependencies can be found in the repository's Project.toml file. The Julia implementation operates by first unloading a tarball containing the set of FASTA training files into a Julia artifact, or life-cycled datastore. The files are plugged into Zstd's training mode, via the Zstd command line interface --train option, to generate a custom dictionary specific to that dataset. Subsequent dictionary manipulation in Julia is based on an experimental CodecZstd.jl branch that includes functions that wrap the Zstd Dictionary API[@kittisopikul]. Random FASTA data is generated using BioSequences.jl[@biosequences] and FASTX.jl[@fastx] APIs which is then transcoded into compressed formats via the CodecBzip2.jl[@codecbzip2], CodecXz.jl[@codecxz], CodecZlib.jl[@codeczlib], and CodecZstd.jl[@codeczstd] codecs for comparative analysis. Both dictionary-based and default Zstd compression are applied to determine if the former desmontrates a significant reduction in data size.
 
 ![Overview of the Julia implementation for the compression model. **A**, Custom dictionary generation via an Julia artifact of FASTA files plugged into the Zstd Dictionary API. **B**, Transcoding randomly generated FASTA formatted data using TranscodingStreams.jl[@sato] compression codecs. ](/var/home/mpersico/distrobox/ubuntu-zstd/Persico2022/assets/figures/Compression_Pipeline_Model.png){#fig-model}
 
@@ -65,6 +65,7 @@ The model contains two pipelines, one for Zstd custom dictionary generation and 
 
 The provided FASTA training dataset was retrieved from a set of \textit{E.coli} MS 200-1 strain genomic scaffolds from a whole genome shotgun run[@ncbi]. Sampling a single organism may allow for additional compression/decompression improvements as the sequence data could possess repeating patterns unique to that individual's or species' genome that are recognized and added to the Zstd dictionary during training. The FASTA files themselves may bear similarity with one another in the same set, such as each file being of similar length. Simultaneously, the Zstd dictionary may not achieve comparable compression/decompression performance when attempted on more dissimilar sequence data. Portability of Zstd dictionaries, in the sense of being universally applicable across all sequence data, could be weighed against generating dedicated dictionaries for specific datasets depending on the storage requirements.  Zstd parameters were kept default, though they can be manually altered, including advanced compression options like compression job size or selecting from 22 predefined compression levels[@facebook].
 
+Zstd's multifarious design warrants further research in how tuning the implementation by altering available options (block size, compression level,...) that might influence compression performance. The development of novel data toolsets have utilized Zstd in unique ways. Aside from the Nucleotide Archival Format, FASTAFS was recently introduced as a filesystem in userspace (FUSE) toolkit wherein FASTA files are pooled into a virtualization abstraction layer that archives the set of data synced with its metadata, generating a high-level interface for accessing and storing FASTA data[@fastafs]. The zstd-seekable compression library is an embedded component that keeps the FASTAFS archive compressed for storage reduction purposes, and it represents an alternative compressed data format that deviates from Zstandard, albeit in a compatible manner, that allows for partial decompression of subranges of data[@facebook]. This is achieved via independently compressed/decompressed Zstd frames, which FASTAFS exploits for fast random access to FASTA files by decompressing only data of interest. Further areas of research for general lossless data compression in the context of biological data could include exploring other properties like compression/decompression speed performance, meaning how fast data transcoding occurs, or piloting proof-of-concept algorithms that attempt novel strategies.
 
 # Supporting information 
 
@@ -119,4 +120,8 @@ Maecenas convallis mauris sit amet sem ultrices gravida. Etiam eget sapien nibh.
 
 # Acknowledgments
 
-I would like to express my sincere gratitude to Professor David Walsh for his advice that helped shape the research as it progressed; My friends and family that supported me throughout my studies; The Julia community for their support before and throughout the writing of this paper; The Quarto developers for producing the Quarto publishing system[@Allaire_Quarto_2022] along with the PLOS template used for this paper; Luca Di Maio and contributors to the Distrobox tool for the ease of setting up the containerized development environments[@maio]; Maximiliano Sandoval and contributors to the Citations app for managing the paper's bibliography[@sandoval], and all other persons that had indirectly assisted through their programs and research.
+I would like to express my sincere gratitude to Professor David Walsh for teaching the bioinformatics course; My friends and family that supported me throughout my studies; The Julia community for their support before and throughout the writing of this paper; Mark Kittisopikul for developing the CodecZstd.jl #dictionary_and_parameters branch for Zstd dictionary functions; The Quarto developers for producing the Quarto publishing system[@Allaire_Quarto_2022] along with the PLOS template used for this paper; Luca Di Maio and contributors to the Distrobox tool for the ease of setting up the containerized development environments[@maio]; Maximiliano Sandoval and contributors to the Citations app for managing the paper's bibliography[@sandoval], and all other persons that had indirectly assisted through their programs and research.
+
+# Conflict of interest
+
+The author declares no conflict of interest.
